[tool.poetry]
name = "cf-app-version-checker"
version = "0.1.0"
description = "PaaS deployment version checking"
authors = ["gareth-e"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.10"
PyGithub = "^1.55"
cloudfoundry-client = "^1.30.0"
psycopg2 = "^2.9.3"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
